lcs-desktop (2.4.8~5) Lcs; urgency=low

  [ Dominique Lepaisant ]
  * Fix bug when user has lcs_is_admin right
  * Fix bug on smbwebclient in admin menu
  * Add icon for smbwebclient
  * Fix bug on new icon smbwebclent
  * Fix bug with maintinfo in core/action/load_settings.php
  * Fix bugs in the display of infos user
  * Add icon appli bcdiweb
  * Add icon annu for 'other' groups  

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Fri, 24 Sep 2010 21:45:36 +0200

lcs-desktop (2.4.8~4) Lcs; urgency=low

  [ Dominique Lepaisant ]
  * Fix bug with the width of windows when the iframe is loaded
  * Removing the import button in the user prefs if the user is in group "Student " 
  * Modify core/js/jquery.desktop.js, core/includes/inc-bars_topbottom.php, core/includes/inc-user_infos.php for roundcube
  * Modify core/includes/inc-finder.php for elfinder

  [ Jean-Luc Chrétien ]
  * Copy trunk version in 2.4.8 Tree
  * Modify inc-lcs-applis.php for new module name elfinder
  * Modify index.php and inc-lcs-applis.php for roundcube and lcs-notify-desktop
  * Fix rights on desktop folder 

  [ Dominique Lepaisant ]
  * Prepares version 2.4.8
  * Changing the procedure for creating the desktop (overwrite the file jquery.desktop.js)
  * Changing the management of CSF parameters and user preferences (xml to json)
  * Added the admin preferences
  * Recording the position of icons in the user preferences
  * Added icons for apps chistelised (he probably missing)
  * Adding context menu
  * Adding the language management (testing)
  * Adding navigation buttons in the top bar of windows
  * Adding a field "web browsing" in the dropdown menu
  * Removing unnecessary images
  * Fix bug on setting wallpaper
  ° Admin can add and manage shared links
  * Add an icon close on the tabs in the taskbar to remove the associated window
  * Add chistelised logo for administration
  * Compatibility IE8
  * Weight reduction pictures
  * Admin can add shared links